--- a/src/CoreBundle/Resources/views/admin/article/edit.html.twig
+++ b/src/CoreBundle/Resources/views/admin/article/edit.html.twig
@@ -38,6 +38,12 @@
             </div>
 
             <div class="row">
+                <div class="col-6">
+                    {{ form_row(form.slider) }}
+                </div>
+            </div>
+
+            <div class="row">
                 <div class="col-8">
                     <div class="form-group">
                         <div class="col-6">
