--- a/src/CoreBundle/Resources/views/admin/widget/_widget_area.html.twig
+++ b/src/CoreBundle/Resources/views/admin/widget/_widget_area.html.twig
@@ -1,12 +1,13 @@
 <div class="widget-area" data-sequence="{{ sequence }}" id="widget_area_{{ widget.id }}">
-    <div class="action-bar widget-action-bar">
-        <a class="delete-widget-link" data-target="{{ widget.id }}"
-           href="{{ path('delete_widget') }}"><i class="fa fa-times"></i></a>
+    <div class="widget-header">
+        {{ widget.name|trans }}
+        <div class="action-bar widget-action-bar">
+            <a class="delete-widget-link" data-target="{{ widget.id }}"
+               href="{{ path('delete_widget') }}"><i class="fa fa-times"></i></a>
 
-        <a class="modal-link" data-toggle="modal" data-target="#admin-modal-lg"
-           href="{{ path('get_widget_preview', {id: widget.id}) }}"><i class="fa fa-eye"></i></a>
+            <a class="modal-link" data-toggle="modal" data-target="#admin-modal-lg"
+               href="{{ path('get_widget_preview', {id: widget.id}) }}"><i class="fa fa-eye"></i></a>
+        </div>
     </div>
-    <div>
-        {{ widget.name|trans }} <span class="widget-content">{{ widget.adminPreview|raw }}</span>
-    </div>
+    <div class="widget-content">{{ widget.adminPreview|raw }}</div>
 </div>
