--- a/src/CoreBundle/Resources/views/_javascript.html.twig
+++ b/src/CoreBundle/Resources/views/_javascript.html.twig
@@ -25,5 +25,17 @@
             }
         });
     });
-
+    $('.admin-modal').on('show.bs.modal', function (e) {
+        var link = $(e.relatedTarget);
+        var loaderPath = "{{ asset('bundles/riverwaycmscore/img/loader.gif') }}";
+        var preloaderContent = '<div style="text-align: center">'
+            + '<img id="modal-loader" src=' + loaderPath + '>'
+            + '</div>';
+        $(".admin-modal .modal-body").html(preloaderContent);
+        $.get(link.attr('href'), function (data) {
+            $(".admin-modal .modal-body").html(data);
+            e.stopPropagation();
+        });
+    });
+</script>
 </script>
