Fix popup placement

--- a/src/CoreBundle/Resources/views/admin/admin_base.html.twig
+++ b/src/CoreBundle/Resources/views/admin/admin_base.html.twig
@@ -18,7 +18,9 @@
         {% block body %}
         {% endblock %}
     </div>
-    {{ include('@RiverwayCmsCore/admin/_popup.html.twig') }}
+    {% block popup %}
+        {{ include('@RiverwayCmsCore/admin/_popup.html.twig') }}
+    {% endblock %}
 </div>
 
 {% block javascripts %}
