--- a/src/CoreBundle/Resources/views/admin/article/edit.html.twig
+++ b/src/CoreBundle/Resources/views/admin/article/edit.html.twig
@@ -69,6 +69,10 @@
 
     {{ form_rest(form) }}
     {{ form_end(form) }}
+{% endblock %}
+
+{% block popup %}
+    {{ parent() }}
     {{ include('@RiverwayCmsCore/admin/_widgets_modals.html.twig', {owner: 'article', id: article.id}) }}
 {% endblock %}
 
