--- a/src/CoreBundle/Resources/views/admin/sidebar/edit.html.twig
+++ b/src/CoreBundle/Resources/views/admin/sidebar/edit.html.twig
@@ -14,6 +14,10 @@
     {{ form_row(form.save) }}
 
     {{ form_end(form) }}
+{% endblock %}
+
+{% block popup %}
+    {{ parent() }}
     {{ include('@RiverwayCmsCore/admin/_widgets_modals.html.twig', {owner: 'sidebar', id: sidebar.id}) }}
 {% endblock %}
 
