--- a/src/CoreBundle/Resources/views/admin/article/edit.html.twig
+++ b/src/CoreBundle/Resources/views/admin/article/edit.html.twig
@@ -52,7 +52,7 @@
 
             {% if article.id %}
 
-                {{ include('@RiverwayCmsCore/admin/_widgets.html.twig', {widgets: article.widgets, id: article.id}) }}
+                {{ include('@RiverwayCmsCore/admin/_widgets.html.twig', {widgets: article.widgets, id: article.id, form: form}) }}
 
             {% endif %}
 
