--- a/src/CoreBundle/Resources/views/Form/fields.html.twig
+++ b/src/CoreBundle/Resources/views/Form/fields.html.twig
@@ -1,5 +1,5 @@
 {% block imperavi_widget %}
-    <input type="hidden" {{ block('widget_attributes') }} value={{ value }} />
+    <textarea {{ block('widget_attributes') }}>{{ value }}</textarea>
 {% endblock %}
 
 {% block file_widget %}
