--- a/src/CoreBundle/Resources/views/admin/slider/edit.html.twig
+++ b/src/CoreBundle/Resources/views/admin/slider/edit.html.twig
@@ -12,7 +12,7 @@
 
         <div id="slides">
             {% for key,slide in form.slides %}
-                <div class="slide" data-key="{{ key }}">
+                <div class="slide-container" data-key="{{ key }}">
                     <h3>Slide #{{ key+1 }} <a href="{{ path('slide_delete', {id: slide.vars.value.id}) }}"><i
                                     class="fa fa-times"></i></a></h3><br/>
                     <div class="row">
@@ -78,10 +78,10 @@
                 }
             });
             $('*[id^=app_slider_slides_]').on('change', function () {
-                var key = $(this).closest('.slide').data("key");
+                var key = $(this).closest('.slide-container').data("key");
                 $.ajax({
                     url: Routing.generate('render_form_slide', {
-                        key: $(this).closest('.slide').data("key"),
+                        key: $(this).closest('.slide-container').data("key"),
                         id: $('#slider').data("key")
                     }),
                     data: $(this).closest('form').serialize(),
