--- a/src/CoreBundle/Resources/views/admin/article/edit.html.twig
+++ b/src/CoreBundle/Resources/views/admin/article/edit.html.twig
@@ -70,6 +70,8 @@
         </div>
         <div class="tab-pane" id="seo-content" role="tabpanel">
             {{ form_row(form.uri) }}
+            {{ form_row(form.metaDescription) }}
+            {{ form_row(form.metaKeywords) }}
         </div>
     </div>
 
