--- a/src/CoreBundle/Resources/views/admin/article/edit.html.twig
+++ b/src/CoreBundle/Resources/views/admin/article/edit.html.twig
@@ -72,6 +72,7 @@
             {{ form_row(form.uri) }}
             {{ form_row(form.metaDescription) }}
             {{ form_row(form.metaKeywords) }}
+            {{ form_row(form.metaReferrer) }}
         </div>
     </div>
 
