--- a/src/CoreBundle/Resources/views/admin/slider/edit.html.twig
+++ b/src/CoreBundle/Resources/views/admin/slider/edit.html.twig
@@ -21,7 +21,7 @@
                                 <div class="row">
                                     <div class="col-5">
                                         {{ form_row(slide.textAlign) }}
-                                        {{ form_row(slide.verticalAlign) }}
+                                        {{ form_row(slide.marginTop) }}
                                         {{ form_row(slide.marginLeft) }}
                                         {{ form_row(slide.width) }}
                                         {{ form_row(slide.url) }}
