--- a/src/CoreBundle/Resources/views/base.html.twig
+++ b/src/CoreBundle/Resources/views/base.html.twig
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8"/>
     <title>{% block title %}Welcome!{% endblock %}</title>
+    <div itemscope itemtype="http://schema.org/Article">
+        <meta itemprop="name" content="{{ article.title }}">
+        <meta itemprop="articleSection" content="{{ schemaOrg.articleCategory}}">
+        <meta itemprop="description" content="{{ schemaOrg.articleDescription }}"/>
+        <meta itemprop="image" content="http://127.0.0.1:8000/uploads/images/redactor/2017-11-03/59fcbfff01360.jpeg"/>
+        {#<meta itemprop="url" content="{{ url }}">#}
+    </div>
     {% block meta_title %}
         {% if article.metaDescription is not null %}
             <meta name="description" content="{{ article.metaDescription }}">
