--- a/src/CoreBundle/Resources/views/admin/_widgets_modals.html.twig
+++ b/src/CoreBundle/Resources/views/admin/_widgets_modals.html.twig
@@ -1,3 +1,5 @@
+{% form_theme form with ['bootstrap_3_horizontal_layout.html.twig', 'TetranzSelect2EntityBundle:Form:fields.html.twig', 'RiverwayCmsCoreBundle:Form:fields.html.twig'] %}
+
 <div class="modal fade" id="widget-types-modal" tabindex="-1" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
