--- a/src/CoreBundle/Resources/views/admin/sidebar/edit.html.twig
+++ b/src/CoreBundle/Resources/views/admin/sidebar/edit.html.twig
@@ -1,5 +1,7 @@
 {% extends '@RiverwayCmsCore/admin/admin_base.html.twig' %}
 
+{% form_theme form with ['bootstrap_3_horizontal_layout.html.twig', 'TetranzSelect2EntityBundle:Form:fields.html.twig', 'RiverwayCmsCoreBundle:Form:fields.html.twig'] %}
+
 {% block body %}
 
     {{ form_start(form) }}
