--- a/src/CoreBundle/Resources/views/admin/widget/_widget_area.html.twig
+++ b/src/CoreBundle/Resources/views/admin/widget/_widget_area.html.twig
@@ -1,3 +1,5 @@
+{% form_theme form with ['bootstrap_3_horizontal_layout.html.twig', 'TetranzSelect2EntityBundle:Form:fields.html.twig', 'RiverwayCmsCoreBundle:Form:fields.html.twig'] %}
+
 <div class="widget-area" data-sequence="{{ sequence }}" id="widget_area_{{ widget.id }}">
     <div class="widget-header">
         {{ widget.name|trans }}
