--- a/src/CoreBundle/Resources/views/ajax-entity-form.html.twig
+++ b/src/CoreBundle/Resources/views/ajax-entity-form.html.twig
@@ -1,1 +1,3 @@
+{% form_theme form with ['bootstrap_3_horizontal_layout.html.twig', 'TetranzSelect2EntityBundle:Form:fields.html.twig', 'RiverwayCmsCoreBundle:Form:fields.html.twig'] %}
+
 {{ form(form) }}
