--- a/src/CoreBundle/Resources/views/templates/common/_slider.html.twig
+++ b/src/CoreBundle/Resources/views/templates/common/_slider.html.twig
@@ -1,6 +1,51 @@
 <div id="slider">
     {% for slide in article.slider.slides %}
-        <div class="slide" style="background-image: url('{{ slide.imageUrl }}')">
+        <div class="slide" style="
+                background-image: url('{{ slide.imageUrl }}');
+                text-align: {{ slide.textAlign }};
+                ">
+            <div class="elements" style="
+                    margin-left: {{ slide.marginLeft }}%;
+                    width:{{ slide.width }}%;
+                    margin-top: {{ slide.marginTop }}%;
+                    ">
+                {% if slide.header %}
+                    <h1 class="slide-header" style="
+                            color: {{ slide.header.textColor }};
+                            padding-left: {{ slide.header.marginLeft }}%;
+                            width: {{ slide.header.width }}%;
+                            ">
+                        {{ slide.header.text }}</h1>
+                {% endif %}
+                {% if slide.subHeader %}
+                    <h2 class="slide-subheader" style="
+                            color: {{ slide.subHeader.textColor }};
+                            padding-left: {{ slide.subHeader.marginLeft }}%;
+                            width: {{ slide.subHeader.width }}%;
+                            ">
+                        {{ slide.subHeader.text }}</h2>
+                {% endif %}
+                {% if slide.description %}
+                    <p class="slide-description" style="
+                            color: {{ slide.description.textColor }};
+                            padding-left: {{ slide.description.marginLeft }}%;
+                            width: {{ slide.description.width }}%;
+                            ">
+                        {{ slide.description.text }}</p>
+                {% endif %}
+                {% if slide.button %}
+                    <button type="button"
+                            class="slide-button"
+                            style="
+                                    background-color: {{ slide.button.bgColor }};
+                                    color: {{ slide.button.textColor }};
+                                    margin-left: {{ slide.button.marginLeft }}%;
+                                    width: {{ slide.button.width }}%;
+                                    ">
+                        {{ slide.button.text }}
+                    </button>
+                {% endif %}
+            </div>
         </div>
     {% endfor %}
 </div>
