sidebar img width and article grid titles

--- a/src/CoreBundle/Resources/public/styles/style.scss
+++ b/src/CoreBundle/Resources/public/styles/style.scss
@@ -110,6 +110,10 @@ body {
     background-color: #868686;
     display: inline-block;
     width: 24%;
+
+    img {
+      width: 100%;
+    }
   }
 
   .right-sidebar {
@@ -118,6 +122,10 @@ body {
     background-color: #868686;
     display: inline-block;
     width: 24%;
+
+    img {
+      width: 100%;
+    }
   }
 
   .content-wrapper {
