Fixed js errors

--- a/src/CoreBundle/Resources/views/admin/slider/edit.html.twig
+++ b/src/CoreBundle/Resources/views/admin/slider/edit.html.twig
@@ -69,6 +69,7 @@
 {% endblock %}
 
 {% block javascripts %}
+    {{ parent() }}
     <script>
         $(document).on('ready', function () {
             $('.colorselector').colorselector();
